# matthews-order-backend

./: .flake8  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  example.api_config.json  example.env  noxfile.py  pyproject.toml
http_requests/: http-client.private.env.example.json  lan.http  local.http  prod.http
src/matthews_order_backend/: app.py  app_utils.py  models.py  settings.py
src/matthews_order_backend/ai/: __init__.py  g4f_client.py  gemini_client.py  open_router_client.py  openai_client.py
src/matthews_order_backend/endpoints/discord/: order_event.py
src/matthews_order_backend/endpoints/rest/: base_endpoint.py  order_endpoint.py
src/matthews_order_backend/endpoints/v1/: order_endpoint.py
src/matthews_order_backend/functions/: __init__.py
src/matthews_order_backend/functions/assistant/: talk.py
src/matthews_order_backend/functions/minecraft/server/info/: is_available.py  playing_list.py  tps.py  version.py
src/matthews_order_backend/functions/minecraft/server/whitelist/: add_ip.py  remove_ip.py
src/matthews_order_backend/functions/testing/: docker_touch.py  slow_echo.py
src/matthews_order_backend/logger/: logger.py  logging_config.py
src/matthews_order_backend/models/: __init__.py  actions.py
src/matthews_order_backend/models/ai/: __init__.py  action_selection_request.py  action_selection_result.py  talk_request.py  talk_result.py
src/matthews_order_backend/utils/: json.py
src/matthewsback_order/: app.py  app_utils.py  models.py
src/matthewsback_order/functions/minecraft/server/whitelist/: add_ip.py  remove_ip.py
src/matthewsback_order/functions/testing/: slow_echo.py
src/mob/: app.py  app_utils.py  prompts.py  settings.py
src/mob/ai/: __init__.py  g4f_client.py  gemini_client.py  open_router_client.py  openai_client.py
src/mob/endpoints/discord/: order_event.py
src/mob/endpoints/rest/: base_endpoint.py  order_endpoint.py
src/mob/endpoints/scheduler/: scheduler.py
src/mob/functions/: __init__.py
src/mob/functions/assistant/: talk.py
src/mob/functions/minecraft/server/info/: is_available.py  playing_list.py  tps.py  version.py
src/mob/functions/minecraft/server/whitelist/: add_ip.py  remove_ip.py
src/mob/functions/network/sam_gal/: autopdate_arsys_domain_public_ip.py
src/mob/functions/testing/: __init__.py  docker_touch.py  slow_echo.py
src/mob/functions/webscraping/padel/: padel_checker_vigo_twelve.py
src/mob/logger/: logger.py  logging_config.py
src/mob/models/: __init__.py  actions.py
src/mob/models/ai/: __init__.py  action_selection_result.py  talk_request.py  talk_result.py
src/mob/utils/: json.py  text.py  time.py
tests/: test_app.py
tests/utils/: test_json.py  test_text.py
