[project]
name = "mob"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergio", email = "arcay.sergio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.4.0",
    "discord-py (>=2.6.4,<3.0.0)",
    "protobuf (>=6.33.2,<7.0.0)",
    "google-genai (>=1.54.0,<2.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "g4f (>=6.7.1,<7.0.0)",
    "autoweb @ git+ssh://git@github.com/sergio-arcay/autoweb.git",
]

[tool.poetry]
packages = [{include = "mob", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
httpx = "^0.28.0"
pytest-asyncio = "^0.23.6"
black = "^26.1.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
nox = "^2025.11.12"
pytest-cov = "^7.0.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "src.mob.app:main_api"
discord = "src.mob.app:main_discord"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"